--- a/index.css
+++ b/index.css
@@ -13,7 +13,6 @@
 }
 
 body {
-
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
   background: #000428; /* fallback for old browsers */
@@ -22,10 +21,11 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  
+
   color: white;
+  min-width: 985px;
   width: 100vw;
-  overflow-x: hidden;
+  overflow-x:auto;
 }
 
 span.bold {
@@ -154,7 +154,6 @@ span.bold {
   width: 100vw;
 
   gap: 40px;
-
 }
 
 .questions h1 {
@@ -210,7 +209,8 @@ span.bold {
   line-height: 2rem;
 }
 
-.ratemycourse, .oldgotcha {
+.ratemycourse,
+.oldgotcha {
   width: 70%;
   margin: auto;
   border-radius: 20px;
@@ -219,7 +219,7 @@ span.bold {
 .about-myself {
   display: flex;
   flex-direction: row;
-  align-items:normal;
+  align-items: normal;
   gap: 20px;
 }
 
@@ -235,7 +235,7 @@ span.bold {
   border-radius: 5px;
 }
 
-.how-long{
+.how-long {
   display: flex;
   text-align: left;
   flex-direction: column;
@@ -254,8 +254,7 @@ span.bold {
   justify-content: space-between;
   align-items: start;
   gap: 20px;
-  overflow-x:auto;
-
+  overflow-x: auto;
 }
 
 .ideas-for-future h3 {
@@ -269,16 +268,11 @@ span.bold {
   line-height: 2rem;
 }
 
-
-
-
-
 .timestamps .timestamp {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-
 }
 
 a {
@@ -293,10 +287,10 @@ a {
   gap: 20px;
 }
 
-.skill-card p{
+.skill-card p {
   font-size: 1.5rem;
 }
 
 footer p {
-  height:30vh;
+  height: 30vh;
 }
