--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ body {
   color: white;
   min-width: 985px;
   width: 100vw;
-  overflow-x:auto;
+
 }
 
 span.bold {
@@ -113,10 +113,10 @@ span.bold {
 }
 
 .buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  grid-template-rows: 1fr 1fr;
 }
 
 .buttons a {
